# billify-prototype

./: .gitignore  README.md  REFACTORING_DDD.md  proprietary-notice.md
backend/: .env.example  .flake8  Dockerfile  Dockerfile-prod  backend-readme.md  backend_structure.txt  demo.py  manage.py  pylintrc.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  test.py
backend/api/: README.md  __init__.py  serializers.py  urls.py
backend/api/views/: __init__.py  auth.py  invoice.py  ponto.py
backend/application/: __init__.py  dtos.py
backend/application/services/: __init__.py  authentication_service.py  invoice_service.py  test_invoice_service.py
backend/apps/: README.md
backend/apps/accounts/: admin.py  models.py
backend/apps/domain/: exceptions.py
backend/apps/integrations/: object_storage.py
backend/apps/invoices/: models.py  views.py
backend/billify/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/billify/settings/: base.py
backend/config/: README.md  __init__.py
backend/config/requirements/: base.txt  development.txt
backend/config/settings/: auth.py  base.py  celery.py
backend/domain/: README.md  exceptions.py
backend/domain/models/: account.py  invoice.py  notification.py  ponto.py  value_objects.py  yuki_invoice.py
backend/infrastructure/: README.md  __init__.py  admin.py  models.py
backend/integrations/: README.md
backend/tests/: test_place.py
backend/token_manager/: certificate.pfx  models.py  serializers.py  views.py
backend/tokens/: token.json  tokens.json
backend/utils/: base.py
(+198 files in other folders)
